hphp/hack/test/extended_reasons/fn_ret.php.debug.exp
error: Typing[4110] Invalid return type

Expected `bool`

 7 | function bar(): »bool« {
 8 |   return foo();
 9 | }

File "fn_ret.php", line 7, character 17 - line 7, character 20:

But got `int`

 3 | function foo(): »int« {
 4 |   return 1;
 5 | }

File "fn_ret.php", line 3, character 17 - line 3, character 19:

Flow:
{
  "Rflow":[
    {
      "Rflow":[
        {
          "Rflow":[
            {"Rhint":[{"filename":"fn_ret.php","line":3,"char_start":17,"char_end":19}]},
            {"Rwitness":[{"filename":"fn_ret.php","line":8,"char_start":10,"char_end":14}]}
          ]
        },
        {"Rwitness":[{"filename":"fn_ret.php","line":8,"char_start":3,"char_end":15}]}
      ]
    },
    {"Rhint":[{"filename":"fn_ret.php","line":7,"char_start":17,"char_end":20}]}
  ]
}


File "", line 0, character 0 - line 0, character -1:

error: Typing[4110] Invalid return type

Expected `bool`

 7 | function bar(): »bool« {
 8 |   return foo();
 9 | }

File "fn_ret.php", line 7, character 17 - line 7, character 20:

But got `int`

 3 | function foo(): »int« {
 4 |   return 1;
 5 | }

File "fn_ret.php", line 3, character 17 - line 3, character 19:

Flow:
{
  "Rflow":[
    {"Rhint":[{"filename":"fn_ret.php","line":3,"char_start":17,"char_end":19}]},
    {"Rhint":[{"filename":"fn_ret.php","line":7,"char_start":17,"char_end":20}]}
  ]
}


File "", line 0, character 0 - line 0, character -1:

2 errors found.
